XWIKI-5507: [Regression] In the object editor, the delete and edit links for each object are no longer visible
Revert "XWIKI-5451: The edit menu is partially hidden in IE7 in the object editor"

This reverts commit 30821.

git-svn-id: https://svn.xwiki.org/svnroot/xwiki/platform/web/branches/xwiki-web-2.4@31178 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-web/standard/src/main/webapp/resources/js/xwiki/editors/dataeditors.css
+++ b/xwiki-platform-web/standard/src/main/webapp/resources/js/xwiki/editors/dataeditors.css
@@ -68,6 +68,7 @@
 
 /* XObject */
 .xobject-title, .add_xobject-title {
+  position: relative;
   border: none;
   cursor: default;
   background: transparent;
